--- a/aboutsuedebag.html
+++ b/aboutsuedebag.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUEDE BAG - Official Site | Air of Sophistication</title>
+    <title>About | Suede Bag Philippines</title>
     <link rel="icon" href="images/suedebagicon.png" type="image/png">
-    <link rel="stylesheet" href="styles(orig).css">
+    <link rel="stylesheet" href="aboutsuedebag.css"> <!-- Make sure styles.css is your updated CSS file -->
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
                 <span class="country-name">Philippines</span>
             </a>
         </div>
-        
+        <!-- Minimalist Line-Only Sign-In Button -->
         <div class="sign-in">
             <a href="signin.html" class="sign-in-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" class="person-icon">
@@ -30,17 +30,25 @@
         </div>
     </header>
 
-    <main>
-        <section class="hero-section">
-            <div class="image-scroll">
-                <img src="images/cover10.png" alt="First Image" class="hero-image">
-                <img src="images/cover6.png" alt="Second Image" class="hero-image">
-                <img src="images/cover 4.jpg" alt="First Image" class="hero-image">
-                <img src="images/cover9.jpeg" alt="Second Image" class="hero-image">
-                <img src="images/cover1.jpeg" alt="First Image" class="hero-image">
-            </div>
-        </section>
+    <div class="banner-container">
+        <img src="images/model1.jpg" alt="Suede Bag Banner" class="banner-image">
+    </div>
 
+    <main>
+        <section class="about-section">
+            <h1>About Suede Bag</h1>
+            <p>Suede Bag is a premium brand specializing in handcrafted leather bags designed to add an air of sophistication to your everyday lifestyle. Based in the Philippines, Suede Bag is committed to providing the finest quality leather goods for both men and women. Our bags are crafted using sustainable materials and timeless designs, ensuring that each product is a statement of elegance and practicality.</p>
+
+            <h2>Our Mission</h2>
+            <p>Our mission is to create high-quality leather bags that combine luxury with functionality. We believe that every bag should not only look good but also withstand the rigors of daily life while providing unmatched comfort and durability.</p>
+
+            <h2>Craftsmanship</h2>
+            <p>Each Suede Bag is meticulously crafted by skilled artisans who take pride in their work. We source the best leather, ensuring every bag maintains the standards of excellence that we stand by. Our attention to detail and commitment to sustainability sets us apart in the fashion industry.</p>
+
+            <h2>Commitment to Sustainability</h2>
+            <p>We are dedicated to ensuring our production processes are sustainable and eco-friendly. From the sourcing of raw materials to the packaging of our bags, we strive to minimize our environmental impact while supporting the communities we work with.</p>
+        </section>
+        
         <section class="info-section">
             <div class="info-category">
                 <h2 class="info-title">About the Company</h2>
