--- a/codeofethics.html
+++ b/codeofethics.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUEDE BAG - Official Site | Air of Sophistication</title>
+    <title>Code of Ethics | Suede Bag Philippines</title>
     <link rel="icon" href="images/suedebagicon.png" type="image/png">
-    <link rel="stylesheet" href="styles(orig).css">
+    <link rel="stylesheet" href="codeofethics.css"> <!-- Make sure styles.css is your updated CSS file -->
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
                 <span class="country-name">Philippines</span>
             </a>
         </div>
-        
+        <!-- Minimalist Line-Only Sign-In Button -->
         <div class="sign-in">
             <a href="signin.html" class="sign-in-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" class="person-icon">
@@ -30,17 +30,19 @@
         </div>
     </header>
 
-    <main>
-        <section class="hero-section">
-            <div class="image-scroll">
-                <img src="images/cover10.png" alt="First Image" class="hero-image">
-                <img src="images/cover6.png" alt="Second Image" class="hero-image">
-                <img src="images/cover 4.jpg" alt="First Image" class="hero-image">
-                <img src="images/cover9.jpeg" alt="Second Image" class="hero-image">
-                <img src="images/cover1.jpeg" alt="First Image" class="hero-image">
-            </div>
-        </section>
+    <div class="banner-container">
+        <img src="images/model1.jpg" alt="Suede Bag Banner" class="banner-image">
+    </div>
 
+    <main>
+        <section class="about-section">
+            <h1>Code of Ethics</h1>
+            <p>Suede Bag Philippines, ethics are the cornerstone of our business conduct. Our commitment to trust, integrity, and responsibility shapes every decision, guiding us toward sustainable growth. This Code of Ethics embodies our dedication to high standards, not only complying with legal frameworks but also upholding the values that define our company culture. These principles guide our actions and relationships, both internally with our employees and externally with customers, partners, and the communities we serve.</p>
+            <p>Since our inception, we have remained steadfast in our commitment to ethical practices, with a particular focus on protecting the environment and engaging responsibly with society. We are committed to continuously improving, ensuring our operations respect human rights, sustainability, and contribute positively to the communities where we operate.</p>
+            <p>This Code of Ethics is updated to reflect our evolution as a brand and provides a clear framework for everyone at Suede Bag | Philippines to follow in their daily work. Whether you're an employee, a partner, or an external stakeholder, we hold ourselves to the highest standards of conduct.</p>
+            <p>This Code of Ethics serves as a guiding framework for all our business operations, ensuring that Suede Bag Philippines remains a trusted and respected entity in the marketplace. We ask that all employees, partners, and stakeholders familiarize themselves with these principles and apply them daily. Upholding these values is essential for our ongoing success, and we are committed to supporting each member of our team in this journey.</p>
+        </section>
+        
         <section class="info-section">
             <div class="info-category">
                 <h2 class="info-title">About the Company</h2>
