--- a/contactus.html
+++ b/contactus.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUEDE BAG - Official Site | Air of Sophistication</title>
+    <title>Contact Client Services | Suede Bag Philippines</title>
     <link rel="icon" href="images/suedebagicon.png" type="image/png">
-    <link rel="stylesheet" href="styles(orig).css">
+    <link rel="stylesheet" href="contactus.css"> <!-- Make sure styles.css is your updated CSS file -->
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
                 <span class="country-name">Philippines</span>
             </a>
         </div>
-        
+        <!-- Minimalist Line-Only Sign-In Button -->
         <div class="sign-in">
             <a href="signin.html" class="sign-in-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" class="person-icon">
@@ -30,17 +30,43 @@
         </div>
     </header>
 
-    <main>
-        <section class="hero-section">
-            <div class="image-scroll">
-                <img src="images/cover10.png" alt="First Image" class="hero-image">
-                <img src="images/cover6.png" alt="Second Image" class="hero-image">
-                <img src="images/cover 4.jpg" alt="First Image" class="hero-image">
-                <img src="images/cover9.jpeg" alt="Second Image" class="hero-image">
-                <img src="images/cover1.jpeg" alt="First Image" class="hero-image">
-            </div>
-        </section>
+    <div class="banner-container">
+        <img src="images/model1.jpg" alt="Suede Bag Banner" class="banner-image">
+    </div>
 
+    <main>
+        <section class="about-section">
+            <h1>Contact Suede Bag Client Services</h1>
+
+            <h3>Phone</h3>
+            <p>
+                Monday - Saturday from 8 AM to 10 PM (GMT+8).<br>
+                Sunday from 11 AM to 6 PM (GMT+8).<br>
+            </p>
+            <p><u>Call Us +63 980 345 3532</u></p>
+
+            <h3>WhatsApp</h3>
+            <p>
+                Monday - Saturday from 9 AM to 10 PM (GMT+8).<br>
+                Sunday from 9 AM to 7 PM (GMT+8).
+            </p>
+            <p><u>WhatsApp Us</u></p>
+
+            <h3>Email</h3>
+            <p>
+                Your inquiry will receive a response from a Client Advisor.
+            </p>
+            <p><u>Write Us</u></p>
+
+            <h3>Live Chat</h3>
+            <p>
+                Monday - Saturday from 9 AM to 9 PM (GMT+8).<br>
+                Sunday from 10 AM to 8 PM (GMT+8).
+            </p>
+            <p><u>Message Us</u></p>
+
+        </section>
+        
         <section class="info-section">
             <div class="info-category">
                 <h2 class="info-title">About the Company</h2>
