--- a/corporateinformation.html
+++ b/corporateinformation.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SUEDE BAG - Official Site | Air of Sophistication</title>
+    <title>Corporate Information | Suede Bag Philippines</title>
     <link rel="icon" href="images/suedebagicon.png" type="image/png">
-    <link rel="stylesheet" href="styles(orig).css">
+    <link rel="stylesheet" href="corporateinformation.css"> <!-- Make sure styles.css is your updated CSS file -->
 </head>
 <body>
     <header>
@@ -18,7 +18,7 @@
                 <span class="country-name">Philippines</span>
             </a>
         </div>
-        
+        <!-- Minimalist Line-Only Sign-In Button -->
         <div class="sign-in">
             <a href="signin.html" class="sign-in-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="16" height="16" class="person-icon">
@@ -30,17 +30,37 @@
         </div>
     </header>
 
-    <main>
-        <section class="hero-section">
-            <div class="image-scroll">
-                <img src="images/cover10.png" alt="First Image" class="hero-image">
-                <img src="images/cover6.png" alt="Second Image" class="hero-image">
-                <img src="images/cover 4.jpg" alt="First Image" class="hero-image">
-                <img src="images/cover9.jpeg" alt="Second Image" class="hero-image">
-                <img src="images/cover1.jpeg" alt="First Image" class="hero-image">
-            </div>
-        </section>
+    <div class="banner-container">
+        <img src="images/model1.jpg" alt="Suede Bag Banner" class="banner-image">
+    </div>
 
+    <main>
+        <section class="about-section">
+            <h1>Corporate Information</h1>
+            <h3>Headquarters</h3>
+            <p>Suede Bag | Philippines<br>
+            928 Aurora Avenue,<br>
+            Quezon City, Metro Manila,<br>
+            Philippines.<br>
+            Phone: <u>+63 995 056 2564</u><br>
+            Email: <u>info@suedebag.com</u><br>
+            </p>
+
+            <h3>Governance</h3>
+            <p>Our leadership team is committed to maintaining the highest standards of governance, ensuring ethical practices and long-term sustainability. Our company operates under Philippine laws and adheres to global standards for transparency, accountability, and corporate responsibility.</p>
+
+            <h3>Contact Information for Stakeholders</h3>
+            <p><b>Customer Service:</b><br>
+                For product inquiries, order assistance, or customer feedback, please contact us at <u>service@suedebag.com</u>.<br>
+            </p>
+            <p><b>Media Inquiries:</b><br>
+                For press releases, interviews, or collaborations, reach out to <u>media@suedebag.com</u>.
+            </p>
+            <p><b>Partnerships:</b><br>
+                For partnership opportunities, please contact <u>partnerships@suedebag.com</u>.
+            </p>
+        </section>
+        
         <section class="info-section">
             <div class="info-category">
                 <h2 class="info-title">About the Company</h2>
